--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 # Home directory of the embedded Elasticsearch instance. Default to the
 # current working directory.
 #
-spring.data.elasticsearch.properties.path.home=target/elastic
+#spring.data.elasticsearch.properties.path.home=target/elastic
 ##elasticsearch日志存储目录
 #spring.data.elasticsearch.properties.path.logs=./elasticsearch/log
 ##elasticsearch数据存储目录
@@ -13,5 +13,5 @@ spring.data.elasticsearch.properties.path.home=target/elastic
 #spring.data.elasticsearch.cluster-nodes=
 
 #以上方式是SpringBoot与ElasticSearch进行本地整合，即将ElasticSearch内嵌在应用，如果我们搭建了ElasticSearch集群，只需要将配置改为如下配置即可：
-#spring.data.elasticsearch.cluster-name=my-application
-#spring.data.elasticsearch.cluster-nodes=localhost:9300
+spring.data.elasticsearch.cluster-name=qiang
+spring.data.elasticsearch.cluster-nodes=115.159.157.163:9300
