--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,12 @@
             <version>PipeProject</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.10.2</version>
+        </dependency>
+
     </dependencies>
 
 
