--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@ buildSrc/build
 /spring-*/build
 /src/asciidoc/build
 target/
+logs/
 
 # Eclipse artifacts, including WTP generated manifests
 .classpath
@@ -33,7 +34,7 @@ spring-*/src/main/java/META-INF/MANIFEST.MF
 *.iml
 *.ipr
 *.iws
-.idea
+.idea/
 out
 test-output
 atlassian-ide-plugin.xml
